docs/versioned_docs/version-4.1.1/quick-start.mdx
---
title: Quick Start
id: quick-start
slug: /quick-start
custom_edit_url: null
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<Tabs
  groupId="cfc"
  defaultValue="js"
  values={[
    { label: "JavaScript", value: "js" },
    { label: "React", value: "react" },
    { label: "Vue@2", value: "vue" },
    { label: "Vue@3", value: "vue3" },
    { label: "Angular", value: "angular" },
    { label: "Preact", value: "preact" }
  ]}>
  <TabItem value="js">

Add the script/CSS to the page.
```html
<script src="https://unpkg.com/@egjs/flicking/dist/flicking.pkgd.min.js" crossorigin="anonymous"></script>
<link rel="stylesheet" href="https://unpkg.com/@egjs/flicking/dist/flicking.css" crossorigin="anonymous" />
```

Or, you can rather import them if you're using a bundler like [webpack](https://webpack.js.org/) or [rollup](https://rollupjs.org/guide/en/).
```js
import Flicking from "@egjs/flicking";
import "@egjs/flicking/dist/flicking.css";
```

Then, add some basic HTML layout of Flicking to your page.

```html
<!-- Viewport element -->
<div id="carousel" class="flicking-viewport">
  <!-- Camera element -->
  <div class="flicking-camera">
    <!-- Panels, class names are your choice -->
    <div class="panel"></div>
    <div class="panel"></div>
    <div class="panel"></div>
  </div>
</div>
```

You should add the `vertical` class to viewport element, if you're making a vertical carousel.
```html
<div class="flicking-viewport vertical">
```

Then initialize Flicking instance with JavaScript after.

```js
const flicking = new Flicking("#carousel", {
  align: "center",
  circular: true,
  bound: true,
  renderOnlyVisible: true
});
```

  </TabItem>
  <TabItem value="react">

You can import & use Flicking as a React Component.

```jsx title="SomeComponent.jsx"
import Flicking from "@egjs/react-flicking";
import "@egjs/react-flicking/dist/flicking.css";
// Or, if you have to support IE9
import "@egjs/react-flicking/dist/flicking-inline.css";

export default () => (
  <Flicking
    align="prev"
    circular={true}
    onMoveEnd={e => {
      console.log(e);
    }}>
    <div class="panel">1</div>
    <div class="panel">2</div>
    <div class="panel">3</div>
  </Flicking>
)
```

<h3>Using the components as a panel</h3>

If you're using the React Component as a panel, it should use a [ref forwarding](https://reactjs.org/docs/forwarding-refs.html)

```jsx
<Flicking>
  <Panel index={1} />
  <Panel index={2} />
  <Panel index={3} />
</Flicking>
```

```jsx title="Panel.jsx"
// If you're using a functional component
export default React.forwardRef(({ index }, ref) => (<div ref={ref}>{ index + 1 }</div>));

// Or... if you're using a class-based React component
class Panel extends React.Component {
  public render() {
    return <div ref={this.props.elRef}>{ index + 1 }</div>;
  }
}

export default React.forwardRef((props, ref) => <Panel elRef={ref} {...props} />);
```

:::warning
You can't use a React component that renders multiple elements
```jsx
<Flicking>
  <Panels /> // This won't work
</Flicking>

const Panels = () => <>
  <div key={0}>0</div>
  <div key={1}>1</div>
  <div key={2}>2</div>
</>;
```
:::

<h3>Bypassing ref forwarding</h3>

If you don't like this behavior, there's a few ways to avoid it.
The easiest way is wrapping each `Panel` component with another element tag.
```jsx
<Flicking>
  <div><Panel index={1} /></div>
  <div><Panel index={2} /></div>
  <div><Panel index={3} /></div>
</Flicking>
```

Or, you can use the `useFindDOMNode` option of Flicking.
```jsx
<Flicking useFindDOMNode={true}>
  <Panel index={1} />
  <Panel index={2} />
  <Panel index={3} />
</Flicking>
```
:::caution
Flicking will use [findDOMNode](https://reactjs.org/docs/react-dom.html#finddomnode) instead of using refs when the `useFindDOMNode` option is enabled.
So, if you're using the [Strict Mode](https://reactjs.org/docs/strict-mode.html), Flicking can show [warning about deprecated findDOMNode usage](https://reactjs.org/docs/strict-mode.html#warning-about-deprecated-finddomnode-usage) at the developer console.
And also, be aware that the component should always return a single DOM that never changes.
> Therefore findDOMNode only worked if components always return a single DOM node that never changes.
:::

  </TabItem>
  <TabItem value="vue">

You can register Flicking either locally...

```js title="SomeComponent.vue - <script>"
import { Flicking } from "@egjs/vue-flicking";

export default {
  components: {
    Flicking: Flicking
  }
}
```
```css title="SomeComponent.vue - <style>"
@import url("node_modules/@egjs/vue-flicking/dist/flicking.css");
// Or, if you have to support IE9
@import url("node_modules/@egjs/vue-flicking/dist/flicking-inline.css");
```

or globally.

```js title="main.js"
import Flicking from "@egjs/vue-flicking";
import "@egjs/vue-flicking/dist/flicking.css";
// Or, if you have to support IE9
import "@egjs/vue-flicking/dist/flicking-inline.css";

Vue.use(Flicking);
```

Then use Flicking like the other Vue components.
```html
<Flicking :options="{ align: 'prev', circular: true }" @move-end="onMoveEnd">
  <div class="panel">1</div>
  <div class="panel">2</div>
  <div class="panel">3</div>
</Flicking>
```

  </TabItem>
  <TabItem value="vue3">

You can register Flicking either locally...

```js title="SomeComponent.vue - <script>"
import Flicking from "@egjs/vue3-flicking";

export default {
  components: {
    Flicking: Flicking
  }
}
```
```css title="SomeComponent.vue - <style>"
@import url("node_modules/@egjs/vue-flicking/dist/flicking.css");
// Or, if you have to support IE9
@import url("node_modules/@egjs/vue-flicking/dist/flicking-inline.css");
```

or globally.

```js title="main.js"
import { createApp } from "vue"
import App from "./App.vue"
import Flicking from "../dist/flicking.esm";
import "@egjs/vue3-flicking/dist/flicking.css";
// Or, if you have to support IE9
import "@egjs/vue3-flicking/dist/flicking-inline.css";

const app = createApp(App);

app.component("Flicking", Flicking);
app.mount("#app");
```

Then use Flicking like the other Vue components.
```html
<Flicking :options="{ align: 'prev', circular: true }" @move-end="onMoveEnd">
  <div class="panel">1</div>
  <div class="panel">2</div>
  <div class="panel">3</div>
</Flicking>
```

:::warning
You can't use a Vue component that uses fragments(a.k.a. multi-root node components) as a panel
```jsx
<Flicking>
  <Panels /> // This won't work
</Flicking>
```

```html title="Panels.vue"
<template>
  <div :key="0">0</div>
  <div :key="1">1</div>
  <div :key="2">2</div>
</template>
```
:::

  </TabItem>
  <TabItem value="angular">

You can add `NgxFlickingModule` at `imports` of your app module to use Flicking.

```js
import { NgxFlickingModule } from '@egjs/ngx-flicking';
import { BrowserModule } from '@angular/platform-browser';
import { NgModule } from '@angular/core';

@NgModule({
  declarations: [
    AppComponent
  ],
  imports: [
    BrowserModule,
    NgxFlickingModule /* Add in imports */
  ],
  providers: [],
  bootstrap: [AppComponent]
})
export class AppModule { } /* Your app */
```

Now you can use the component `ngx-flicking` and the directive `flicking-panel` in your templates.
You should add directive `flicking-panel` to the panel elements you use

```html
<ngx-flicking
  [options]="{ circular: true, duration: 500 }"
  [plugins]="plugins"
  (needPanel)="onNeedPanel($event)"
  (moveEnd)="onMoveEnd($event)"
>
  <div flicking-panel class="panel">
    <img src="https://naver.github.io/egjs-flicking/images/bg01.jpg" />
  </div>
  <div flicking-panel class="panel">
    <img src="https://naver.github.io/egjs-flicking/images/bg02.jpg" />
  </div>
  <div flicking-panel class="panel">
    <img src="https://naver.github.io/egjs-flicking/images/bg03.jpg" />
  </div>
</ngx-flicking>
```

  </TabItem>
  <TabItem value="preact">

You can import & use Flicking as a Preact Component.

```jsx title="SomeComponent.jsx"
import Flicking from "@egjs/preact-flicking";
import "@egjs/preact-flicking/dist/flicking.css";
// Or, if you have to support IE9
import "@egjs/preact-flicking/dist/flicking-inline.css";

export default () => (
  <Flicking
    align="prev"
    circular={true}
    onMoveEnd={e => {
      console.log(e);
    }}>
    <div class="panel">1</div>
    <div class="panel">2</div>
    <div class="panel">3</div>
  </Flicking>
)
```

<h3>Using the components as a panel</h3>

If you're using the React Component as a panel, it should use a [ref forwarding](https://reactjs.org/docs/forwarding-refs.html)

```jsx
<Flicking>
  <Panel index={1} />
  <Panel index={2} />
  <Panel index={3} />
</Flicking>
```

```jsx title="Panel.jsx"
// If you're using a functional component
export default React.forwardRef(({ index }, ref) => (<div ref={ref}>{ index + 1 }</div>));

// Or... if you're using a class-based React component
class Panel extends React.Component {
  public render() {
    return <div ref={this.props.elRef}>{ index + 1 }</div>;
  }
}

export default React.forwardRef((props, ref) => <Panel elRef={ref} {...props} />);
```

:::warning
You can't use a React component that renders multiple elements
```jsx
<Flicking>
  <Panels /> // This won't work
</Flicking>

const Panels = () => <>
  <div key={0}>0</div>
  <div key={1}>1</div>
  <div key={2}>2</div>
</>;
```
:::

<h3>Bypassing ref forwarding</h3>

If you don't like this behavior, there's a few ways to avoid it.
The easiest way is wrapping each `Panel` component with another element tag.
```jsx
<Flicking>
  <div><Panel index={1} /></div>
  <div><Panel index={2} /></div>
  <div><Panel index={3} /></div>
</Flicking>
```

Or, you can use the `useFindDOMNode` option of Flicking.
```jsx
<Flicking useFindDOMNode={true}>
  <Panel index={1} />
  <Panel index={2} />
  <Panel index={3} />
</Flicking>
```
:::caution
Flicking will use [findDOMNode](https://reactjs.org/docs/react-dom.html#finddomnode) instead of using refs when the `useFindDOMNode` option is enabled.
So, if you're using the [Strict Mode](https://reactjs.org/docs/strict-mode.html), Flicking can show [warning about deprecated findDOMNode usage](https://reactjs.org/docs/strict-mode.html#warning-about-deprecated-finddomnode-usage) at the developer console.
And also, be aware that the component should always return a single DOM that never changes.
> Therefore findDOMNode only worked if components always return a single DOM node that never changes.
:::

  </TabItem>
</Tabs>
